# dbfxsql

./: .env.example  .gitignore  README.md  cowsay  demo3.cast  pyproject.toml  test.py
dbf2sql_sync/: __init__.py
dbf2sql_sync/common/: __init__.py
dbf2sql_sync/common/entities/: exceptions.py  models.py
dbf2sql_sync/common/helpers/: utils.py
dbf2sql_sync/functionalities/: __init__.py
dbf2sql_sync/functionalities/dbf/: dbf_connection.py  dbf_controller.py  dbf_queries.py
dbf2sql_sync/functionalities/sql/: sql_connection.py  sql_controller.py  sql_queries.py
dbf2sql_sync/functionalities/sync/: sync_controller.py
dbfxsql/: __init__.py  __main__.py  cli.py
dbfxsql/common/: __init__.py
dbfxsql/common/entities/: constants.py  exceptions.py  models.py
dbfxsql/common/helpers/: file_manager.py  formatters.py  utils.py
dbfxsql/functionalities/dbf/: dbf_connection.py  dbf_controller.py  dbf_queries.py
dbfxsql/functionalities/sql/: sql_connection.py  sql_controller.py  sql_queries.py
dbfxsql/functionalities/sync/: comparator.py  sync_connection.py  sync_controller.py  sync_queries.py  sync_services.py
examples/: dbf_preview.py  sql_preview.py  sync_preview.py
test/: dbf_preview.py  sql_preview.py  sync_preview.py  test_dbf.py  test_sql.py
